name:           haskell-streamit
version:        0.4
synopsis: 	A StreamIt EDSL in Haskell.
description: 	StreamIt (<http://groups.csail.mit.edu/cag/streamit/>) is a
		stream programming language designed for efficient execution
		of large streaming applications. The StreamIt runtime system
		allows executing stream programs on a variety of target
		architectures, including multicore machines and cluster of
		COTS workstations. This is a shallow-embedding of StreamIt in
                Haskell which invokes the StreamIt compiler to generate a 
                a stream graph from the haskell-streamit EDSL program.
copyright: 	Copyright (c) 2013 Abhishek Kulkarni
author:		Abhishek Kulkarni <adkulkar@indiana.edu>
maintainer:	Abhishek Kulkarni <adkulkar@indiana.edu>
category: 	Language, Parallelism
license: 	BSD3
license-file:   LICENSE
stability: 	Experimental
homepage:       http://adk9.github.com/haskell-streamit
build-type:	Simple
cabal-Version:	>=1.6
tested-with:    GHC==7.0.2

extra-source-files:
  Examples/*.hs

source-repository head
  type:     git
  location: git://github.com/adk9/haskell-streamit.git

library
  exposed-modules:
    Language.StreamIt
    Language.StreamIt.Backend
    Language.StreamIt.Backend.StreamIt
    Language.StreamIt.Backend.TBB
    Language.StreamIt.Core
    Language.StreamIt.Filter
    Language.StreamIt.Graph
    Language.StreamIt.Compile
    Language.Haskell.TH.Lift.Extras

  build-depends:
    base >= 4.0     && < 5,
    mtl  >= 1.1.0.1,
    temporary >= 1.0 && < 1.2,
    process, directory,
    bytestring, th-lift,
    unix, zlib, template-haskell

  extensions:
    EmptyDataDecls
    FlexibleInstances
    FlexibleContexts
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    PatternGuards
    Rank2Types
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    DeriveDataTypeable

  ghc-options: -W
