name:           haskell-streamit
version:        0.5
synopsis: 	A StreamIt EDSL in Haskell.
description: 	StreamIt (<http://groups.csail.mit.edu/cag/streamit/>) is a
		stream programming language designed for efficient execution
		of large streaming applications. The StreamIt runtime system
		allows executing stream programs on a variety of target
		architectures, including multicore machines and cluster of
		COTS workstations. This is a shallow-embedding of StreamIt in
                Haskell which invokes the StreamIt compiler to generate a 
                a stream graph from the haskell-streamit EDSL program.
copyright: 	Copyright (c) 2013 Abhishek Kulkarni
author:		Abhishek Kulkarni <adkulkar@indiana.edu>
		Ryan Newton <rrnewton@gmail.com>
maintainer:	Abhishek Kulkarni <adkulkar@indiana.edu>
category: 	Language, Parallelism
license: 	BSD3
license-file:   LICENSE
stability: 	Experimental
homepage:       http://adk9.github.com/haskell-streamit
build-type:	Simple
cabal-Version:	>=1.8
tested-with:    GHC==7.0.2 GHC==7.4.2 GHC==7.6.2

extra-source-files:
  Examples/file/Main.hs
  Examples/hello/Main.hs
  Examples/merge/Main.hs
  Examples/fir/Main.hs

source-repository head
  type:     git
  location: git://github.com/adk9/haskell-streamit.git

library
  exposed-modules:
    Language.StreamIt
    Language.StreamIt.Backend
    Language.StreamIt.Backend.StreamIt
    Language.StreamIt.Backend.TBB
    Language.StreamIt.Core
    Language.StreamIt.Filter
    Language.StreamIt.Graph
    Language.StreamIt.Compile
    Language.Haskell.TH.Lift.Extras
    Examples.StreamIt
    Examples.Hello.HelloWorld
    Examples.File.FileTest
    Examples.File.FilePrinter
    Examples.Mergesort.MergeSort
    Examples.Vectadd.VectAdd
    Examples.FFT2.FFT2

  build-depends:
    base >= 4.0     && < 5,
    mtl  >= 1.1.0.1,
    temporary >= 1.0 && < 1.2,
    process, directory,
    bytestring, th-lift,
    unix, zlib, template-haskell

  extensions:
    EmptyDataDecls
    FlexibleInstances
    FlexibleContexts
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    MultiParamTypeClasses
    PatternGuards
    Rank2Types
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    DeriveDataTypeable

  ghc-options: -W

Test-Suite TestStreamHS
  type:              exitcode-stdio-1.0
  main-is:           TestStreamHS.hs
  build-depends:     base >= 4.4 && < 5,
                     HUnit >= 1.2 && < 1.3,
                     test-framework >= 0.6 && < 0.9,
                     test-framework-hunit >= 0.2.0 && < 0.4,
                     haskell-streamit
  ghc-options:       -Wall -fno-warn-unused-do-bind
  hs-source-dirs:    tests
  extensions:
    GADTs
    FlexibleInstances
    TemplateHaskell
